--- a/webProject/src/main/webapp/resources/footer.jspf
+++ b/webProject/src/main/webapp/resources/footer.jspf
@@ -1,8 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=EUC-KR"
-    pageEncoding="EUC-KR"%>
-
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <footer>
-	ΗªΕΝ
+	ν‘Έν„°
 </footer>
 
 </body>
